# mlops-assignment-e2e-ml-pipeline

./: .env.example  .gitignore  REPORT.md  docker-compose.yaml  mlflow.db  pyproject.toml  run-airflow-standalone.sh
dags/: evaluate_agent.py  evaluate_agent_docker.py
minio-data/.minio.sys/: format.json
mlflow-data/: mlflow.db
pipeline/: __init__.py  log_mlflow.py  upload_artifacts.py
runs/run-20260708-174849/: config.json
runs/run-20260708-174849/run-agent/: exit_statuses_1783532935.484952.yaml  preds.json
runs/run-20260708-174849/run-eval/: nebius__moonshotai__Kimi-K2.6.run-20260708-174849.json
runs/run-20260708-180037/: config.json  manifest.json
runs/run-20260708-180037/run-agent/: preds.json
runs/run-20260708-182650/: metrics.json
runs/run-20260708-183831/: config.json  manifest.json
runs/run-20260708-183831/run-agent/: preds.json
runs/run-20260708-193808/: manifest.json
runs/run-20260708-193808/run-agent/: exit_statuses_1783539493.4729083.yaml  preds.json
runs/run-20260709-095226/: config.json  manifest.json  metrics.json
runs/run-20260709-095226/run-agent/: exit_statuses_1783590759.0619948.yaml  preds.json
runs/run-20260709-095226/run-eval/: nebius__moonshotai__Kimi-K2.6.run-20260709-095226.json
runs/run-20260709-100409/: config.json  manifest.json
runs/run-20260709-100409/run-agent/: preds.json
runs/run-20260709-114033/: config.json  manifest.json  metrics.json
runs/run-20260709-114033/run-agent/: preds.json
runs/run-20260709-115838/: config.json  manifest.json
scripts/: start-minio.sh  start-mlflow.sh
(+72 files in other folders)
