[project]
name = "mlops-assignment-e2e-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mini-swe-agent>=2.4.1",
    "swebench>=4.1.0",
    "mlflow>=2.16",
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
